# src/routes/api/authRouter.ts
@@ -1,8 +1,7 @@
 import express, { Request, Response } from 'express'
 import { AuthController } from '../../controllers/auth'
-import { signUpValidation, loginValidation } from '../../utils/authValidation'
-import { LoginResponse, SignupResponse } from 'src/models/User'
-// import { sendEmail } from '../../utils/createMail'
+import { signUpValidation, loginValidation, verifyValidation } from '../../utils/authValidation'
+import { LoginResponse, SignupResponse, verifyResponse } from '../../models/User'
 
 const authRouter = express.Router()
 
@@ -31,7 +30,19 @@ authRouter.post('/login', async (req: Request, res: Response) => {
     return res.status(200).send(response)
   } catch (err) {
     console.log(err.message)
-    return res.status(404).send('invalid login Details')
+    return res.status(err.code || 403).send(err.message)
+  }
+})
+authRouter.post('/email/verify', async (req: Request, res: Response) => {
+  try {
+    let { error, value: body } = verifyValidation(req.body)
+    if (error) return res.status(400).send(error.details[0].message)
+
+    let response: verifyResponse = await controller.verifyEmail(body.email, body.verificationCode)
+    console.log(response)
+    return res.status(200).send(response)
+  } catch (error) {
+    return res.status(error.code || 403).send(error.message)
   }
 })
 
