# src/utils/authValidation.ts
@@ -1,5 +1,5 @@
 import Joi from 'joi'
-import { LoginPayload, SignupPayload } from 'src/models/User'
+import { LoginPayload, SignupPayload, verifyResponse } from '../models/User'
 // import { PassThrough } from 'stream'
 
 export const signUpValidation = (data: SignupPayload): Joi.ValidationResult =>
@@ -13,4 +13,10 @@ export const loginValidation = (data: LoginPayload): Joi.ValidationResult =>
   Joi.object({
     email: Joi.string().email().required(),
     password: Joi.string().required().min(8).max(18)
+  }).validate(data)
+
+export const verifyValidation = (data: verifyResponse): Joi.ValidationResult =>
+  Joi.object({
+    verificationCode: Joi.string().length(6),
+    email: Joi.string().email().required()
   }).validate(data)
